--- a/tool-nav-template.html
+++ b/tool-nav-template.html
@@ -2,6 +2,6 @@
     <div class="c-pane-header t-pane-header-color t-content-font-large t-font-color-white flex-none">Navigation Links</div>
 
     <div class="k-content t-side-panel-bgcolor scroll flex-auto">
-            Content goes here
+        <div ng-repeat="navLink in navLinks">{{navLink.DisplayName || navLink.LinkURL}}</div>
     </div>
 </div>
