--- a/tool-nav-template.html
+++ b/tool-nav-template.html
@@ -2,6 +2,16 @@
     <div class="c-pane-header t-pane-header-color t-content-font-large t-font-color-white flex-none">Navigation Links</div>
 
     <div class="k-content t-side-panel-bgcolor scroll flex-auto">
-        <div ng-repeat="navLink in navLinks">{{navLink.DisplayName || navLink.LinkURL}}</div>
+        <breadcrumblist list-data="linkData" get-children="updateDisplayNavLinks" selected="selectLink"
+                    item-name-prop="DisplayName" disabled-prop="IsDisabled" busy="true"
+                    current-page-label="Page" total-pages-label="of {0}"
+                    max-parents-to-show="4" ng-cloak>
+
+            <div style="height: 19px; line-height: 19px; padding-left: 5px;" class="item-name" title="{{::item.LinkURL}}">
+                <span class="subhead-text-fill" ng-bind="::item.DisplayName"></span>
+            </div>
+        </breadcrumblist>
     </div>
+
+    
 </div>
