Select symbol on hover

--- a/tool-nav-template.html
+++ b/tool-nav-template.html
@@ -2,7 +2,7 @@
     <div class="c-pane-header t-pane-header-color t-content-font-large t-font-color-white flex-none">Navigation Links</div>
 
     <div class="k-content t-side-panel-bgcolor scroll flex-auto">
-        <breadcrumblist list-data="linkData" get-children="updateDisplayNavLinks" selected="selectSymbol"
+        <breadcrumblist list-data="linkData" get-children="updateDisplayNavLinks" selected="selectSymbol" mouse-over="selectSymbol"
                     item-name-prop="DisplayName" disabled-prop="IsDisabled" busy="true"
                     current-page-label="Page" total-pages-label="of {0}"
                     max-parents-to-show="4" ng-cloak>
